--- a/index.html
+++ b/index.html
@@ -7,17 +7,20 @@
 </head>
 
 <body>
+    <div id="scoreboard">
+        <h3 id="scoreboard-text"></h3>
+    </div>
     <div class="container">
         <div class="board">
-            <div class="cell" onclick="makeMove(0)"></div>
-            <div class="cell" onclick="makeMove(1)"></div>
-            <div class="cell" onclick="makeMove(2)"></div>
-            <div class="cell" onclick="makeMove(3)"></div>
-            <div class="cell" onclick="makeMove(4)"></div>
-            <div class="cell" onclick="makeMove(5)"></div>
-            <div class="cell" onclick="makeMove(6)"></div>
-            <div class="cell" onclick="makeMove(7)"></div>
-            <div class="cell" onclick="makeMove(8)"></div>
+            <div class="cell" onclick="makeMove(0,'player')"></div>
+            <div class="cell" onclick="makeMove(1,'player')"></div>
+            <div class="cell" onclick="makeMove(2,'player')"></div>
+            <div class="cell" onclick="makeMove(3,'player')"></div>
+            <div class="cell" onclick="makeMove(4,'player')"></div>
+            <div class="cell" onclick="makeMove(5,'player')"></div>
+            <div class="cell" onclick="makeMove(6,'player')"></div>
+            <div class="cell" onclick="makeMove(7,'player')"></div>
+            <div class="cell" onclick="makeMove(8,'player')"></div>
         </div>
     </div>
     <div id="log">
